--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,10 @@ keywords = ["llm", "json", "generator", "openai", "knowledge-graph", "nlp"]
 dependencies = [
     "openai>=1.35.0",
     "json-repair>=0.25.0",
-    "python-docx>=0.8.11",
+    "python-docx>=1.1.0",
     "tiktoken>=0.7.0",
     "requests>=2.31.0",
+    "typing-extensions>=4.0.0",
 ]
 
 [project.optional-dependencies]
