refactor: 重构代码库，采用统一的架构和文档
- 移除遗留的 CLI、配置和处理器模块，采用统一的方法
- 删除已弃用的文件（cli.py，config.py，processor.py，prompt_template.py，run_mode.py，validator.py）
- 移除遗留的模板和验证规则实现
- 添加全面的 ARCHITECTURE.md 文档，说明 v2.0 的设计原则和组件结构
- 添加 CHANGELOG.md 以跟踪版本历史和变更
- 添加 PROJECT_SUMMARY.md 提供项目概述和关键信息
- 更新 MANIFEST.in 以反映新的文件结构
- 重新组织 llmjson 包，采用更清晰的模块结构
- 更新 factory.py 以支持新的统一处理器创建模式
- 增强 templates/base.py 的配置处理功能
- 提升 validators/universal.py 的验证能力
- 添加 simple_cli.py 作为轻量级命令行界面替代方案
- 更新 pyproject.toml 和 setup.py 以适应新的包结构
- 整合基于配置的架构以提高可维护性和可扩展性

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,37 +1,23 @@
-# 包含README和许可证文件
+# 包含核心文件
 include README.md
 include LICENSE
 include requirements.txt
-include pyproject.toml
+include .env.example
 
-# 包含配置文件
-include *.json
-include *.yaml
-include *.yml
+# 包含配置和模板
+recursive-include configs *.json
+recursive-include templates *.yaml
 
-# 包含文档文件
-recursive-include docs *
-recursive-include llm_json_generator *.md
-recursive-include llm_json_generator *.txt
-recursive-include llm_json_generator *.json
+# 包含示例
+include example.py
+include simple_cli.py
 
-# 排除不需要的文件
-exclude *.pyc
-exclude *.pyo
-exclude *~
-exclude .DS_Store
-recursive-exclude * __pycache__
-recursive-exclude * *.py[co]
-recursive-exclude * *~
-recursive-exclude * .DS_Store
-
-# 排除测试文件
-exclude tests/*
-recursive-exclude tests *
-
-# 排除开发文件
-exclude .gitignore
-exclude .pytest_cache
-exclude .mypy_cache
-exclude .coverage
-exclude tox.ini
+# 排除不必要的文件
+global-exclude *.pyc
+global-exclude *.pyo
+global-exclude *~
+global-exclude __pycache__
+global-exclude .git*
+global-exclude test_*
+global-exclude *_test.py
+global-exclude *.log
