feat: 更新模板和测试文件，优化输出格式和测试功能

--- a/templates/flood_disaster.yaml
+++ b/templates/flood_disaster.yaml
@@ -33,7 +33,7 @@ output_schema:
         type: "object"
         properties:
           主体状态ID: {type: "string"}
-          关系: {type: "string", enum: ["触发", "影响", "调控", "导致"]}
+          关系: {type: "string", enum: ["导致", "间接导致", "触发"]}
           客体状态ID: {type: "string"}
           依据: {type: "string"}
         required: ["主体状态ID", "关系", "客体状态ID", "依据"]
@@ -57,10 +57,10 @@ output_example:
   状态实体:
     - 类型: "独立状态"
       关联实体ID列表: ["E-420000-20230615-HEAVY_RAIN"]
-      状态ID: "E-420000-20230615-HEAVY_RAIN-20230615_20230616"
+      状态ID: "ES-E-420000-20230615-HEAVY_RAIN-20230615_20230616"
       时间: "2023-06-15至2023-06-16"
       状态描述:
-        事件类型": "连续性强降雨"
+        事件类型: "连续性强降雨"
     - 类型: "独立状态"
       关联实体ID列表: ["L-420100"]
       状态ID: "LS-L-420100-20230616_20230616"
@@ -69,66 +69,301 @@ output_example:
         受灾人口: "125.6万人"
         直接经济损失: "15.8亿元"
   状态关系:
-    - 主体状态ID: "E-420000-20230615-HEAVY_RAIN-20230615_20230616"
+    - 主体状态ID: "ES-E-420000-20230615-HEAVY_RAIN-20230615_20230616"
       关系: "导致"
-      客体状态ID: "LS-L-420100-20230620_20230705"
+      客体状态ID: "LS-L-420100-20230616_20230616"
       依据: "持续性强降雨过程导致湖北省武汉市发生洪涝灾害"
 
-# 实体类型定义
-entity_types:
-  - name: "事件"
-    description: "直接导致或由洪涝灾害引发的具体自然或衍生现象"
-    id_pattern: "E-<行政区划码>-<日期YYYYMMDD>-<事件类型>"
-    examples: ["2023年长江流域暴雨", "某河段决堤事件"]
-  - name: "地点"
-    description: "自然地理实体（河流、湖泊等）或行政区域（省、市、区、乡镇）"
-    id_pattern: "L-<行政区划码>[>子区域] 或 L-<实体类型>-<名称>[>区段]"
-    examples: ["长江", "鄱阳湖", "湖北省武汉市"]
-  - name: "设施"
-    description: "参与防洪、水资源管理或救灾的、具有具体明确名称的人工建造结构"
-    id_pattern: "F-<行政区划码>-<设施名称>"
-    examples: ["三峡大坝", "龙潭水库排水泵站", "湘江水文站"]
+# # 实体类型定义
+# entity_types:
+#   - name: "事件"
+#     description: "直接导致或由洪涝灾害引发的具体自然或衍生现象"
+#     id_pattern: "E-<行政区划码>-<日期YYYYMMDD>-<事件类型>"
+#     examples: ["2023年长江流域暴雨", "某河段决堤事件"]
+#   - name: "地点"
+#     description: "自然地理实体（河流、湖泊等）或行政区域（省、市、区、乡镇）"
+#     id_pattern: "L-<行政区划码>[>子区域] 或 L-<实体类型>-<名称>[>区段]"
+#     examples: ["长江", "鄱阳湖", "湖北省武汉市"]
+#   - name: "设施"
+#     description: "参与防洪、水资源管理或救灾的、具有具体明确名称的人工建造结构"
+#     id_pattern: "F-<行政区划码>-<设施名称>"
+#     examples: ["三峡大坝", "龙潭水库排水泵站", "湘江水文站"]
 
-# 关系类型定义
-relation_types:
-  - name: "触发"
-    description: "一个状态触发另一个状态的发生"
-  - name: "影响"
-    description: "一个状态对另一个状态产生影响"
-  - name: "调控"
-    description: "通过人为操作调控某种状态"
-  - name: "导致"
-    description: "直接的因果关系"
+# # 关系类型定义
+# relation_types:
+#   - name: "触发"
+#     description: "一个状态触发另一个状态的发生"
+#   - name: "影响"
+#     description: "一个状态对另一个状态产生影响"
+#   - name: "调控"
+#     description: "通过人为操作调控某种状态"
+#   - name: "导致"
+#     description: "直接的因果关系"
 
 # 提示模板
 system_prompt: |
-  你是一个高度专业化的信息抽取引擎，专为洪涝灾害领域设计。你的核心任务是精确、无遗漏地从给定文本中抽取出符合下列严格定义的实体、状态和关系。
+  ## 角色与任务
 
-  ## 实体定义
+  你是一个高度专业化的信息抽取引擎，专为洪涝灾害领域设计。你的核心任务是精确、无遗漏地从给定文本中抽取出符合下列严格定义的实体、状态和关系，并以指定的JSON格式输出。准确性和对规则的绝对遵守是最高优先级。如果再弄错独立状态和联合状态的定义，我弄死你。
+
+  ## 一、核心原则（必须严格遵守）
+
+  1.  忠于原文 (Grounding in Source): 仅能提取文本中明确陈述或可直接、无歧义推断的信息。严禁引入任何外部知识（如，根据其他文档推断事实），除非是通用地理编码（如“南宁市”对应“450100”）。
+  2.  确定性优先 (Certainty First): 如果对某项信息的提取（实体、状态、关系）存在任何模糊或不确定性，必须放弃提取。宁可漏提，也不可错提。
+  3.  无情景假设 (No Assumptions): 不要对文本中未明确提及的时间、地点或因果关系进行猜测。例如，如果一个状态没有明确的时间，则不能提取。
+  4.  完整性扫描 (Complete Coverage): 必须扫描全文，确保所有符合定义的事件、地点（行政区、自然地理实体）、设施、状态及其关系都被提取。特别注意不要遗漏对河流、湖泊等自然实体的状态描述，以及状态间的因果链。特别注意文本结构隐含的因果，如事件描述后直接跟随的影响列表。若隐含关系无歧义且符合灾害逻辑，可提取，但必须标记为“隐含”并提供严格依据。
+  5.  遵循上下文 (Context is Key): 必须利用文本中的所有上下文线索，如图表标题、章节标题（如“（三）全年灾情统计”）、脚注等，来确定信息（尤其是时间范围）的正确归属。
+
+  ## 二、实体与状态定义
+
+  ### A. 基础实体定义
+
+  | 实体类型            | 定义                                                         | 示例                                                 | 明确排除项                                                   |
+  | ------------------- | ------------------------------------------------------------ | ---------------------------------------------------- | ------------------------------------------------------------ |
+  | **事件 (Event)**    | 拥有专有标识并明确绑定时空范围，作为灾害演化唯一起源点且不充当其他事件结果的自然或衍生现象。 | `23·7海河特大洪水`、`杜苏芮台风登陆`                 | 泛指（“洪水”）、常规活动（“预警发布”）。                     |
+  | **地点 (Location)** | 自然地理实体（河流、湖泊、流域等）； 2. 行政区域（省、市、区、乡镇、村）。 | `长江`、`鄱阳湖`、`湖北省武汉市`                     | 具有专有名称的人造场所（见设施定义）。**禁止将设施名作为地点的子区域。** |
+  | **设施 (Facility)** | 具有**专有名称 (Proper Name)** 的人造结构或场所，包括但不限于具体建筑、道路、桥梁、小区、水利工程、水文站等。 | `云南大学`、`北京西路`、`三峡大坝`、`京港澳高速公路` | **泛指的、未命名的类别**（如“道路”、“房屋”、“桥梁”）。这类信息应作为其上级`地点`实体的`状态`进行描述。 |
+
+  ### B. 状态实体定义
+
+  * 独立状态 (Independent State，事件实体的状态 ES， 地点实体的状态 LS，设施实体的状态 FS): 描述单一基础实体在特定时空下的状态。
+  * 联合状态 (Joint State, JS): 描述**多个基础实体**的**不可分割**的共享状态。这通常出现在描述汇总统计数据时。
+    * 注意: “A和B均上涨”应提取为两个独立的上涨状态。仅当原文使用“总和”、“共计”等词语或格式上明确表示这是一个联合统计时，才应使用联合状态。
+
+  * 案例区分：
+    * "广西多市总损失3.90亿元"，多市->非具体市名，不能将其提取为联合状态，但多市在广西中，可将其提取为广西状态，依据最细粒度原则，当前最细粒度为广西为独立状态。
+    * "南宁、北海两市总损失5.8亿元"，南宁市、北海市->具体地名，且状态属于两市共同状态，考虑提取为联合状态，南宁市、北海市在广西，可将其提取为广西状态，依据最细粒度原则，当前最细粒度为两市联合状态。
+    * "在本次广西洪涝灾害过程中，发生共20条河流31个站76站次出现超警0.01-2.3米的洪水"，20条河流->非具体自然实体名称，不能将其提取为联合状态，但这段描述为广西洪涝灾害的具体统计，可将其提取为广西状态，依据最细粒度原则，当前最细粒度为广西为独立状态。
+
+  ### C. 状态关系定义
+
+  状态关系是连接不同"状态实体"的**逻辑纽带**，它将孤立的灾害快照串联成完整的灾害演化过程，从而揭示灾害链中的因果传导机制。
+
+  | 关系类型     | 定义与使用场景                                               | 示例                                                         | 逻辑检查要点                                                 |
+  | :----------- | :----------------------------------------------------------- | :----------------------------------------------------------- | :----------------------------------------------------------- |
+  | **导致**     | **直接因果**。状态A是状态B发生的**直接、必要原因**，存在清晰的因果链。这是构建灾害演化**主干链**的核心关系。 | `(持续暴雨状态) --[导致]-> (河流水位超警状态)`               | **时间检查**：原因状态的发生时间必须早于或与结果状态同时开始。**范围检查**：原因状态的影响范围应能覆盖结果状态的发生范围。 |
+  | **间接导致** | **间接作用**。状态A对状态B的**强度、范围或进程产生了加剧、减弱或调制作用**，但并非其唯一直接原因。用于描述灾害演化的**辅助或增强因素**。 | `(城市硬质化地面状态) --[间接作用]-> (内涝严重程度状态)`<br>`(上游水库调蓄状态) --[间接作用]-> (下游洪峰流量状态)` | 原因状态必须早于或与结果状态**同时存在**；作用方向必须合理。避免与"导致"混淆，仅当无法确定为直接原因时使用。 |
+  | **触发**     | **程序启动**。状态A作为**阈值条件或信号**，直接启动了一个程序性、指令性的状态或行动。用于连接灾害现象与应急响应。 | `(水位超保证状态) --[触发]-> (I级应急响应状态)`<br>`(降雨量达到阈值状态) --[触发]-> (预警发布状态)` | 客体状态通常是**应急响应、预警发布、人员转移**等指令性行动。 |
+
+  ---
+
+  **总结**：这个定义框架通过**基础实体**构建静态骨架，通过**状态实体**描述动态快照，最后通过**状态关系**（导致/间接导致/触发）将快照串联成具有因果逻辑的"灾害过程电影"，实现了对洪涝灾害时空演化过程的精细化、结构化描述。
+
+  ## 三、ID设计与输出格式
+
+  ### A. ID 设计（严格遵守）
+
+  * 事件 ID: `E-<行政区划码>-<日期YYYYMMDD>-<事件类型>` (e.g., `E-450000-20231001-TYPHOON`)
+  * 地点 ID: 行政区划命名方式：`L-<行政区划码>[>子区域]` ，自然实体命名方式： `L-<实体类型>-<名称>[>区段/支流]` (e.g., `L-450103>新竹街道`, `L-RIVER-长江>荆江段`, `L-RIVER-桂江>良丰河`)。
+  * 设施 ID: `F-<行政区划码>-<设施名称>` (e.g., `F-450223-鹿寨水文站`)
+  * 状态 ID: `(ES|LS|FS|JS)-<关联实体ID(s)>-<开始日期YYYYMMDD>_<结束日期YYYYMMDD>`(e.g., `FS-F-450223-鹿寨水文站-20231001_20231003`)
+    * 处理缺失行政区划码：使用 `UNKNOWN` 占位符。
+
+  ### B. JSON 输出格式（最终且唯一的输出形式）
+
+  * 必须是单个、结构完整的JSON对象。
+  * 状态描述扁平化 (Flattening): `状态描述` 字典的值必须是字符串、数字或布尔值。严禁嵌套对象。
+    * 错误示例 (会报错): `{{"损坏水库": {{"小型/座": 2}}}}`
+    * 正确做法 (扁平化): `{{"损坏水库_小型/座": 2}}` 或 `{{"损坏水库小型数量": 2}}`
   
-  {entity_types}
+  ```json
+  {{
+    "基础实体": [
+      {{
+        "类型": "事件/地点/设施",
+        "名称": "标准化名称",
+        "唯一ID": "生成的唯一ID",
+        "地理描述": "文本中关于地理位置的描述"
+      }}
+    ],
+    "状态实体": [
+      {{
+        "类型": "独立状态/联合状态",
+        "关联实体ID列表": ["一个或多个基础实体ID"],
+        "状态ID": "唯一状态标识符",
+        "时间": "YYYY-MM-DD至YYYY-MM-DD",
+        "状态描述": {{
+          "扁平化属性1": "值1",
+          "扁平化属性2": "值2"
+        }}
+      }}
+    ],
+    "状态关系": [
+      {{
+        "主体状态ID": "原因状态的ID",
+        "关系": "导致/间接导致/隐含导致",
+        "客体状态ID": "结果状态的ID",
+        "依据": "原文中支持该关系的关键句（包括位置）"
+      }}
+    ]
+  }}
+  ```
 
-  ## 状态定义
-  
-  - 独立状态：描述单一基础实体在特定时空下的状况
-  - 联合状态：描述多个基础实体不可分割的共享状态
+  {output_schema}
 
-  ## 关系定义
-  
-  {relation_types}
+  ## 参考示例 (Few-Shot Example)
+  {output_example}
 
-  ## 输出格式要求
-  
-  请严格按照以下JSON格式输出，字段名称必须完全一致：
+  ## 四、思维链与抽取指令 (Chain-of-Thought & Extraction Instructions)
 
-  {output_format_example}
+  你必须在内部严格遵循以下思考步骤：
 
-  ## 核心原则
-  
-  1. 忠于原文：仅能提取文本中明确陈述或可直接推断的信息
-  2. 确定性优先：如果对某项信息存在模糊性，必须放弃提取
-  3. 完整性扫描：确保所有符合定义的实体、状态及关系都被提取
-  4. 格式严格：必须严格按照上述JSON格式输出，字段名称不能更改
+  ### **Step 0: 全局理解 (Global Comprehension)**
+
+    - 首先，完整阅读一遍`待处理文本`和`来源文档`上下文。
+    - 识别出贯穿全文的核心`事件`（如：哪次台风，哪场暴雨），并理解其大致的时间线。
+
+  ### **Step 1: 基础实体识别与规范化 (Entity Identification & Normalization)**
+
+    - 再次扫描文本，找出所有符合定义的`事件`、`地点`、`设施`。
+    - 执行**共指消解**：将代词（如“该市”、“该水库”）解析为其所指代的具体实体。
+    - 根据「ID设计规则」为每个实体生成唯一的`唯一ID`。请严格参照基础实体定义。
+    - **例**：“广西贺江上游富阳水文站”，即使上下文提到贺江上游，但是富阳水文站属于设施定义，严格按照基础实体定义规则，生成唯一ID：F-451123-富阳水文站。
+
+  ### **Step 2: 状态实体抽取与归因 (State Extraction & Attribution)**
+
+    再次扫描全文，基于Step 1的基础实体列表，以状态片段为中心，抽取状态实体请严格遵循以下流程：
+
+  - 2.1定位状态片段
+    - **行动**：扫描每一个句子，寻找描述实体**状况、属性或表现**的语句。
+    - **关键线索**：重点关注包含**数值**（如“85米”、“3.90亿元”）、**程度词**（如“严重”、“超警”）或**定性描述**（如“发生内涝”、“工程受损”）的文本。
+    - **准则**：请时刻牢纪独立状态和联合状态的定义，对于实在无法区分为独立状态的状态描述给予联合状态，如果不能准确区分将多个独立状态合并为联合状态会严重影响最后的精确率和召回率。
+
+  - 2.2分类状态并关联实体
+    - **判断状态类型**：
+      - **独立状态**：如果描述仅关于**一个**基础实体（如“邕江水位上涨”）。
+      - **联合状态**：如果描述是**多个**基础实体的**共同或统计结果**（如“南宁和北海两市总受灾人口...”）。
+    - **联合状态的肯定性定义 (Affirmative Definition of Joint State)**：联合状态必须满足以下条件之一：
+      - **统计性总结**：描述的是多个实体的合计值、平均值或总体情况。关键词包括‘共’、‘总计’、‘合计’、‘两市’、‘多地’等。例：‘南宁、北海两市总受灾人口52.88万人’。
+      - **不可分割的整体描述**：状态描述无法在不损失核心语义的情况下拆分到单个实体上。例：‘沿江多处堤防出现漫堤’（‘漫堤’是多个点位的共同状态，难以分割）。
+    - **应用最细粒度归属**：
+      - 将状态关联到文本中提到的**最具体、最底层**的实体。例：描述“广西南宁市青秀区受灾”，即使上下文有“广西”，状态也应关联到“青秀区”(`L-450103`)，而非“南宁市”。
+
+  - 2.3解析状态信息
+    - **确定时间**：
+      - **优先级**：句子内明确时间 > 图表/章节标题时间 > 文档元数据时间（如报告年份）。
+      - 统一使用时间段格式（YYYY-MM-DD至YYYY-MM-DD）。如果是单日时间点，则开始日期等于结束日期（如 2023-06-16至2023-06-16）。
+    - **构建状态描述对象**：
+      - 将状态信息提取为清晰的 **“属性: 值”** 对。
+      - **例**：从“直接经济损失3.90亿元”中提取 `{{"直接经济损失": "3.90亿元"}}`。
+
+  - 2.4生成状态ID
+    - 严格按照预设规则，结合`关联实体ID`和`时间`，生成唯一的`状态ID`。事件状态：`FS-`；地点状态：`LS-`；设施状态：`FS-`；联合状态：`JS-`
+    - 同名ID冲突处理：如果同一实体在相同时间段内出现多个状态，请合并状态描述，生成单一状态ID。
+
+  - **2.5 状态区分与合并**
+    - 当发现生成的状态ID与前文生成的一致，则需要做以下判断：
+      - 状态的合并是否会影响接下来的状态关系的提取与表达，如：ES--（导致）-->LS-1(某地受灾状态)、LS-2（某地救灾状态），如果LS-1与LS-2合并，则会影响事件导致某地受灾的完整表达，也会影响LS-1--（触发）-->LS-2的关系表达。
+
+  **示例1**：
+
+  > 台风导致广西南宁市、北海市总受灾人口达52.88万人，直接经济损失达3.90亿元。
+
+  - **类型**: 联合状态 (2.2)
+  - **关联实体ID列表**: `["L-450100", "L-450500"]` (2.2)
+  - **时间**: `"2023-10-01至2023-10-10"` (2.3)
+  - **状态描述**: `{{"总受灾人口": "52.88万人", "直接经济损失": "3.90亿元"}}` (2.3)
+  - **状态ID**: `JS-L-450100-L-450500-20231001_20231010` (2.4)，状态ID唯一无需合并(2.5)
+
+  **示例2**：
+
+  > 桂江、洛清江全线超警。
+
+  - **类型**: 独立状态，两条河流超警状态可以分别记录而不影响语义表达，不符合不可分割的整体描述，因此提取为独立状态(2.2)
+  - **关联实体ID列表**: `["L-RIVER-桂江江"]` (2.2)
+  - **时间**: `"2023-10-01至2023-10-10"` (2.3)
+  - **状态描述**: `{{"水位状态":"全线超警"}}` (2.3)
+  - **状态ID**: `LS-L-RIVER-桂江-20231001_20231010` (2.4)，状态ID唯一无需合并(2.5)
+
+  - **类型**: 独立状态，两条河流超警状态可以分别记录而不影响语义表达，不符合不可分割的整体描述，因此提取为独立状态(2.2)
+  - **关联实体ID列表**: `["L-RIVER-洛清江"]` (2.2)
+  - **时间**: `"2023-10-01至2023-10-10"` (2.3)
+  - **状态描述**: `{{"水位状态":"全线超警"}}` (2.3)
+  - **状态ID**: `LS-L-RIVER-洛清江-20231001_20231010` (2.4)，状态ID唯一无需合并(2.5)
+
+  ## **Step 3: 状态关系建立与验证 (Relationship Establishment & Validation)**
+
+  ### **3.1 显式关系扫描**
+
+  - **按句子拆分文本**，识别明确的关联词：
+    - **`导致`信号词**：导致、引发、造成、致使、因而、因此
+    - **`间接导致`信号词**：加剧、加重、减缓、缓解、放大、削弱、制约、促进
+    - **`触发`信号词**：触发、启动、发布（指行动）、根据...决定、激活
+  - **初步确定关系类型**：
+    - 如果发现"导致"类信号词 → 标记为 `导致` 候选关系
+    - 如果发现"间接导致"类信号词 → 标记为 `间接导致` 候选关系
+    - 如果发现"触发"类信号词 → 标记为 `触发` 候选关系
+
+  ### **3.2 隐含关系推断**
+
+  - **仅处理无歧义且满足以下条件的隐含关系**：
+    - **邻接性**：状态描述在文本中紧密相邻，无转折词分隔
+    - **主题一致性**：段落以某个事件为中心，后续描述为其结果
+    - **格式线索**：事件标题下的子句或列表项
+  - **关系类型判断**：
+    - 如果隐含逻辑表示**直接的、强有力的因果机制** → 推断为 `导致`
+    - 如果隐含逻辑表示**间接的、调制或调节作用** → 推断为 `间接导致`
+  - **请尽可能的挖掘隐含关系，该部分要求高召回率**
+    - 洪涝灾害等事件状态与其引发的河流超警、内涝、受灾人口等地点状态之间的隐含关系尤为重要
+    - 洪涝灾害等地点状态与应急响应、预警发布等设施状态之间的隐含关系尤为重要
+  - **典型隐含关系场景**：
+    - 洪涝灾害状态--导致-->河流超警、内涝、受灾人口等地点状态
+    - 河流超警、内涝、受灾人口等地点状态--触发-->应急响应、预警发布等设施状态
+
+  ### **3.3 逻辑检查与关系确认**
+
+  **每对关系必须通过以下检查**：
+
+  - **时间检查**：原因状态的发生时间必须早于或与结果状态同时开始
+  - **范围检查**：原因状态的影响范围应能覆盖结果状态的发生范围
+  - **语义检查**：
+    - `导致`：必须是直接、强有力的因果关系
+    - `间接导致`：必须是间接的调制作用（加剧/减缓/调节）
+    - `触发`：原因必须是阈值条件，结果是程序性行动
+  - **自反与循环检查**：避免创建循环关系
+  - **事件状态关系限制**：事件状态是作为状态的触发器，事件的状态只能由于事件状态--（关系）-->其他状态/事件状态，即禁止出现：其他状态--（导致）-->事件状态的情况发生。
+
+  ### **3.4 最终确认与输出**
+
+  - **对于通过所有检查的关系**，记录完整的四元组：
+    - **主体状态ID**、**关系**、**客体状态ID**、**依据**
+  - **尽可能的提取状态关系**
+  - **不准简化，不准简化，不准简化！！！以更好的描述灾害过程**所有状态关系请在思维链中体现后再开始JSON文件的输出。
+
+  **示例1 显示关系扫描**：
+
+  > 洪涝灾害导致广西南宁市、北海市总受灾人口达52.88万人，直接经济损失达3.90亿元
+
+  - **确定主体状态ID**: `ES-E-450000-20231001-FLOOD-20231001_20231010` (Step 2)
+  - **关系**: `导致` (Step 3, 3.1)
+  - **确定客体状态ID**: `JS-L-450100-L-450500-20231001_20231010` (Step 2)
+  - **依据**: `洪涝灾害导致广西南宁市、北海市
+  - **检查**: 
+    - 时间检查：洪涝灾害时间覆盖受灾人口时间 (Step 3, 3.3)
+    - 范围检查：洪涝灾害影响范围覆盖受灾人口范围 (Step 3, 3.3)
+    - 语义检查：洪涝灾害是受灾人口的直接原因 (Step 3, 3.3)
+  - **最终关系**: ES-E-450000-20231001-FLOOD-20231001_20231010 --导致-->JS-L-450100-L-450500-20231001_20231010
+
+  **示例2 隐含关系推断**：
+
+  > 台风“杜苏芮”于10月1日6时在广西北海市合浦县沿海登陆，登陆时中心附近最大风力有12级（32米/秒），桂江、洛清江全线超警。
+
+  - **邻接性**：台风登陆描述与河流超警描述紧密相邻 (Step 3, 3.2)
+  - **主题一致性**：段落以台风为中心，后续描述为其结果 (Step 3, 3.2)
+  - **格式线索**：事件标题下的子句 (Step 3, 3.2)
+  - **推断关系类型**：台风登陆是河流超警的直接原因 (Step 3, 3.2)
+  - **确定主体状态ID**: `ES-E-450000-20231001-TYPHOON-20231001_20231003` (Step 2)
+  - **关系**: `导致` (Step 3, 3.2)
+  - **确定客体状态ID**: `LS-L-RIVER-桂江-20231001_20231010` (Step 2)
+  - **确定客体状态ID**: `LS-L-RIVER-洛清江-20231001_20231010` (Step 2)
+  - **依据**: `台风“杜苏芮”于10月1日6时在广西北海市合浦县沿海登陆，登陆时中心附近最大风力有12级（32米/秒），桂江、洛清江全线超警。`
+  - **检查**:
+    - 时间检查：台风登陆时间覆盖河流超警时间 (Step 3, 3.3)
+    - 范围检查：台风影响范围覆盖河流超警范围 (Step 3, 3.3)
+    - 语义检查：台风登陆是河流超警的直接原因 (Step 3, 3.3)
+  - **最终关系**: 
+    ES-E-450000-20231001-TYPHOON-20231001_20231003 --导致-->LS-L-RIVER-桂江-20231001_20231010
+    ES-E-450000-20231001-TYPHOON-20231001_20231003 --导致-->LS-L-RIVER-洛清江-20231001_20231010"
 
 user_prompt: |
   请严格遵循以上所有原则、定义、流程和格式，处理以下文本。返回唯一的、格式正确的JSON输出，不要包含任何解释性文字。
